Make images less giant, fix text cutoff issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -532,6 +532,7 @@ aside.cta-quote span.quote {
 
 .about-carousel .item .caption h3 {
     margin: 0;
+    font-size: 18px;
 }
 
 .about-carousel .item .caption hr {
